objects/Employment__c.object
<CustomObject>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Job_Position__c</fullName>
        <label>Title/ Job Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Em-{0}</displayFormat>
        <label>Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>